@@ -1,3 +1,15 @@
+2014-12-21  Eric Carlson  <eric.carlson@apple.com>
+
+        [iOS] avoid WebVideoFullscreenManager crash
+        https://bugs.webkit.org/show_bug.cgi?id=139852
+        <rdar://problem/19319302>
+
+        Reviewed by Darin Adler.
+
+        * WebProcess/ios/WebVideoFullscreenManager.mm:
+        (WebKit::WebVideoFullscreenManager::didExitFullscreen): NULL-check m_layerHostingContext and m_page.
+        (WebKit::WebVideoFullscreenManager::setVideoLayerFrameFenced): NULL-check m_layerHostingContext.
+
 2014-12-21  David Kilzer  <ddkilzer@apple.com>
 
         Fix WebKit2 build with newer clang compiler
